Unfortunately, testing position absolute for footer as stopgap fix.

--- a/steam-api-front/src/App.css
+++ b/steam-api-front/src/App.css
@@ -114,7 +114,8 @@ a {
   clear: both;
   background-color: #333;
   display: block;
-  position: relative;
+  position: absolute;
+  bottom: 0;
   height: 70px;
   margin-top: -70px; 
 }
